--- a/module-compiler-kt/build.gradle
+++ b/module-compiler-kt/build.gradle
@@ -10,8 +10,6 @@ dependencies {
     kapt 'com.google.auto.service:auto-service:1.0-rc7'
     implementation 'com.google.auto.service:auto-service:1.0-rc7'
     //快速生成.kt文件的库
-//    implementation 'com.squareup:kotlinpoet:1.7.2'
-    //快速生成.java文件的库
-    implementation 'com.squareup:javapoet:1.13.0'
+    implementation 'com.squareup:kotlinpoet:1.7.2'
 //    implementation 'com.github.javaparser:javaparser-core:2.4.0'
 }
