--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,5 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 org.gradle.daemon=true
+
+AUTO_PREFIX=kt_auto_
