--- a/module-router/build.gradle
+++ b/module-router/build.gradle
@@ -13,9 +13,16 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "AUTO_PREFIX", "\"${AUTO_PREFIX}\""
+        }
+
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "AUTO_PREFIX", "\"${AUTO_PREFIX}\""
         }
     }
 }
