--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
+include ':module-compiler-kt'
 include ':module-annotations'
-include ':module-compiler'
+include ':module-compiler-java'
 include ':module-router'
 include ':app'
