--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,15 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 allprojects {
+
+    //如果是kotlin项目,请添加此项,纯Java项目请忽略
+    tasks.withType(Javadoc).all { enabled = false }
     repositories {
         google()
         jcenter()
