修复远程调用回调两次的bug

--- a/local.properties
+++ b/local.properties
@@ -8,3 +8,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 sdk.dir=/Users/wxh/android/androidSDK
+bintray.user=lebusishu
+bintray.apikey=a474a901012a3e214efb2c8ae34738f0fd04f912
